--- a/cluster/examples/kubernetes/ceph/operator.yaml
+++ b/cluster/examples/kubernetes/ceph/operator.yaml
@@ -85,6 +85,23 @@ spec:
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
+  name: nfsganeshas.ceph.rook.io
+spec:
+  group: ceph.rook.io
+  names:
+    kind: NFSGanesha
+    listKind: NFSGaneshaList
+    plural: nfsganeshas
+    singular: nfsganesha
+    shortNames:
+    - rcnfs
+    - nfs
+  scope: Namespaced
+  version: v1alpha1
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
   name: objectstores.ceph.rook.io
 spec:
   group: ceph.rook.io
