ganesha: move types from alpha to beta group
Signed-off-by: travisn <tnielsen@redhat.com>

--- a/cluster/examples/kubernetes/ceph/operator.yaml
+++ b/cluster/examples/kubernetes/ceph/operator.yaml
@@ -50,7 +50,7 @@ spec:
     - rcnfs
     - nfs
   scope: Namespaced
-  version: v1alpha1
+  version: v1beta1
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
