ceph: WIP: POC: supporthenable topology spread constraints
Signed-off-by: Hiroshi Muraoka <h.muraoka714@gmail.com>

--- a/cluster/examples/kubernetes/ceph/object-ec.yaml
+++ b/cluster/examples/kubernetes/ceph/object-ec.yaml
@@ -50,6 +50,7 @@ spec:
     #    operator: Exists
     #  podAffinity:
     #  podAntiAffinity:
+    #  topologySpreadConstraints:
     # A key/value list of annotations
     annotations:
     #  key: value
