--- a/cluster/examples/kubernetes/ceph/nfs.yaml
+++ b/cluster/examples/kubernetes/ceph/nfs.yaml
@@ -25,6 +25,7 @@ spec:
     #          operator: In
     #          values:
     #          - mds-node
+    #  topologySpreadConstraints:
     #  tolerations:
     #  - key: mds-node
     #    operator: Exists
