--- a/cluster/examples/kubernetes/ceph/object.yaml
+++ b/cluster/examples/kubernetes/ceph/object.yaml
@@ -49,6 +49,7 @@ spec:
     #    operator: Exists
     #  podAffinity:
     #  podAntiAffinity:
+    #  topologySpreadConstraints:
     # A key/value list of annotations
     annotations:
     #  key: value
