--- a/cluster/examples/kubernetes/ceph/cluster.yaml
+++ b/cluster/examples/kubernetes/ceph/cluster.yaml
@@ -89,6 +89,7 @@ spec:
 #              - storage-node
 #      podAffinity:
 #      podAntiAffinity:
+#      topologySpreadConstraints:
 #      tolerations:
 #      - key: storage-node
 #        operator: Exists
